cluster/components/gitops-controller/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: gitops-controller
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd-test.zimmermann.eu.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd-test.zimmermann.eu.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
